--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/question_text_view"
         android:padding="24dp"
-        android:text="@string/question_text"	/>
+        android:text="@string/question_australia"	/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,6 +23,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/false_button"	/>
-    </LinearLayout> </LinearLayout>
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
 
 
