--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,18 +1,24 @@
-<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+
+    android:layout_height="match_parent">
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/question_text_view"
         android:padding="24dp"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="center_horizontal"
         android:text="@string/question_australia"	/>
     <LinearLayout
         android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+      >
         <Button
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
@@ -30,24 +36,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"></TextView>
+        android:layout_marginTop="30dp"
+
+        ></TextView>
+
 
     <Button
         android:id="@+id/cheat_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/cheat_button">
-
-    </Button>
-
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="40dp"
+        android:text="@string/cheat_button"></Button>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:layout_gravity="bottom|right"
-        android:orientation="horizontal">
+       >
 
         <ImageButton
             android:id="@+id/previous_button"
@@ -56,20 +62,18 @@
 
             android:src="@drawable/ic_baseline_navigate_before_24"
             android:layout_height="60dp"
-           	/>
+            />
         <ImageButton
             android:id="@+id/next_button"
             android:contentDescription="@string/next_button"
             android:layout_width="60dp"
             android:layout_marginRight="4dp"
-             android:src="@drawable/ic_baseline_navigate_next_24"
+            android:src="@drawable/ic_baseline_navigate_next_24"
             android:layout_height="60dp"
-           	/>
+            />
     </LinearLayout>
 
 
 
 
-</LinearLayout>
-
-
+</FrameLayout>
