--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -46,8 +46,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="55dp"
         android:text="@string/cheat_button"></Button>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cheat_token"
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="bottom|center_horizontal"></TextView>
 
     <LinearLayout
         android:layout_width="wrap_content"
