--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,13 @@
         android:text="@string/cheat_button">
 
     </Button>
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="15dp"
+       android:id="@+id/cheat_token">
 
+   </TextView>
 
     <LinearLayout
         android:layout_width="wrap_content"
